vendor/github.com/richardlehane/webarchive/examples/jhove/invalid/invalid-warcreader-diagnosis-1.warc

The monkeys are a coming!

Donkey Kong country...

